--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=springboot-bidding-app-api
+server.port=5000
+server.servlet.context-path=/api/v1/
+spring.profiles.active=${ACTIVE_PROFILE}
+
+spring.config.import=optional:file:.env[.properties]
+
