add: implement paystack payment gateway

--- a/.env
+++ b/.env
@@ -12,3 +12,5 @@ ACTIVE_PROFILE=dev
 SECRET_KEY=ghsdkggkhskgskghslkghsljghslgjshgljsghlsghslhl
 EXPIRATION=82300000
 FRONTEND_URL=http://localhost:5173/account-activation
+PAYSTACK_SECRET_KEY=sk_test_dbefa16b7ec363d577c68c726651954845fdb784
+PAYSTACK_PUBLIC_KEY=pk_test_53802275b1ed2dd89a966d2ace3ec5c08b5208fd
