--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -25,3 +25,4 @@ spring.application.mailing.frontend.activation-url=${FRONTEND_URL}
 
 spring.application.security.jwt.secret-key=${SECRET_KEY}
 spring.application.security.jwt.expiration=${EXPIRATION}
+spring.application.payStack.secretKey=${PAYSTACK_SECRET_KEY}
