refactor: made some changes

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -26,3 +26,5 @@ spring.application.mailing.frontend.activation-url=${FRONTEND_URL}
 spring.application.security.jwt.secret-key=${SECRET_KEY}
 spring.application.security.jwt.expiration=${EXPIRATION}
 spring.application.payStack.secretKey=${PAYSTACK_SECRET_KEY}
+
+spring.jackson.serialization.write-dates-as-timestamps=false
