add: implement websocket

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -28,3 +28,6 @@ spring.application.security.jwt.expiration=${EXPIRATION}
 spring.application.payStack.secretKey=${PAYSTACK_SECRET_KEY}
 
 spring.jackson.serialization.write-dates-as-timestamps=false
+logging.level.root=INFO
+logging.level.org.springframework.web.socket=DEBUG
+
