--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 # Database Configuration
-spring.datasource.url=jdbc:postgresql://${POSTGRESQL_HOST}:${POSTGRESQL_PORT}/${POSTGRESQL_DATABASE}
-#spring.datasource.url=jdbc:postgresql://bid_db_lzmm_user:uior338XlM0wlQNaT3Zok0srYaiAeJaJ@dpg-cqaf902ju9rs73birfm0-a.oregon-postgres.render.com/bid_db_lzmm
+#spring.datasource.url=jdbc:postgresql://${POSTGRESQL_HOST}:${POSTGRESQL_PORT}/${POSTGRESQL_DATABASE}
+spring.datasource.url=jdbc:postgresql://dpg-cqaf902ju9rs73birfm0-a/bid_db_lzmm
 
 spring.datasource.username=${POSTGRESQL_USERNAME}
 spring.datasource.password=${POSTGRESQL_PASSWORD}
