fix: correct database url

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,5 @@
 # Database Configuration
-#spring.datasource.url=jdbc:postgresql://${POSTGRESQL_HOST}:${POSTGRESQL_PORT}/${POSTGRESQL_DATABASE}
-spring.datasource.url=jdbc:postgresql://dpg-cqaf902ju9rs73birfm0-a/bid_db_lzmm
-
+spring.datasource.url=jdbc:postgresql://${POSTGRESQL_HOST}:${POSTGRESQL_PORT}/${POSTGRESQL_DATABASE}
 spring.datasource.username=${POSTGRESQL_USERNAME}
 spring.datasource.password=${POSTGRESQL_PASSWORD}
 spring.sql.init.mode=always
