--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,27 +1,18 @@
-# H2 database configuration
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.sql.init.platform=password
+# Database Configuration
+spring.datasource.url=jdbc:postgresql://${POSTGRESQL_HOST}:${POSTGRESQL_PORT}/${POSTGRESQL_DATABASE}
+spring.datasource.username=${POSTGRESQL_USERNAME}
+spring.datasource.password=${POSTGRESQL_PASSWORD}
+spring.sql.init.mode=always
 
-
-# Optional: Enable H2 console in browser
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-# Hibernate dialect for H2
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-
-
+# JPA/Hibernate properties
 spring.jpa.open-in-view=false
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLInnoDBDialect
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
-
 
 
 spring.mail.host=${EMAIL_HOST}
